@@ -5,6 +5,10 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 26-10-2004 added: Kai password is displayed using *'s in the GUI.
+  - 26-10-2004 fixed: Hide File extension and Parent Dir Items clash in General Settings
+  - 26-10-2004 added: SF patch [ 1048648 ] Fix MP3 Parser due to change in multi-genre handling - thanks kraqh3d!
+  - 26-10-2004 added: partial addition of SF patch [ 1050489 ] Music OSD Timeout - thanks kraqh3d!
   - 24-10-2004 fixed: Slideshow aspect ratio
   - 24-10-2004 added: New Slideshow
   - 24-10-2004 added: context menu is mapped to TITLE on the remote
